--- a/static/home.html
+++ b/static/home.html
@@ -254,11 +254,15 @@
           <div class="route"><span>Signal UI</span><code>GET /signal-ui</code></div>
           <div class="route"><span>Execute UI</span><code>GET /ui/execute</code></div>
           <div class="route"><span>Backtest UI</span><code>GET /backtest</code></div>
+          <div class="route"><span>Profile</span><code>GET /profile</code></div>
+          <div class="route"><span>Analyst</span><code>GET /agent/analyst</code></div>
           <div class="route"><span>Auth</span><code>GET /login</code></div>
         </div>
         <div class="ctaRow">
           <a class="btn primary" href="/ui/execute">Open Execute UI</a>
           <a class="btn" href="/signal-ui">Open Signal UI</a>
+          <a class="btn" href="/profile">Account Dashboard</a>
+          <a class="btn" href="/agent/analyst">Stock Analyst</a>
           <a class="btn warn" href="/backtest">Run Backtest</a>
         </div>
       </div>
